# finance-tracker

./: .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
config/: settings.py  urls.py
config/templates/account/: signup.html
tracker/: admin.py  charting.py  factory.py  filter.py  forms.py  manager.py  models.py  resources.py  urls.py  views.py
tracker/management/commands/: generate_transaction.py
tracker/migrations/: 0001_initial.py  0002_category_transaction.py  0003_alter_transaction_created_at.py  0004_alter_transaction_options_and_more.py
tracker/templates/tracker/: base.html  charts.html  index.html  transaction-list.html
tracker/templates/tracker/partials/: charts-container.html  create-transaction.html  navbar.html  transaction-container.html  transaction-form.html  transaction-success.html  transaction-update-success.html  update-transaction.html
tracker/tests/: conftest.py  test_models.py  test_views.py
