[project]
name = "finance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-allauth>=65.4.1",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-htmx>=1.22.0",
    "django-import-export>=4.3.5",
    "django-template-partials>=24.4",
    "django-unfold>=0.47.0",
    "django-widget-tweaks>=1.5.0",
    "faker>=35.2.0",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.0",
]
